<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natia.cuny.HomeActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:id="@+id/my_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <Button
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/monday"
        android:textSize="20sp"
        android:background="@drawable/button_monday"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tuesday"
        android:background="@drawable/button_tuesday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/wensday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/wednesday"
        android:background="@drawable/button_wednesday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/thursday"
        android:background="@drawable/button_thursday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/friday"
        android:background="@drawable/button_friday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/saturday"
        android:background="@drawable/button_saturday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sunday"
        android:background="@drawable/button_sunday"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Language"
        android:id="@+id/Button_language"
        android:background="@drawable/language"
        android:fontFamily="cursive"
        android:textStyle="bold"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/language_fragment"
        />

</RelativeLayout>


